[metadata]
name = openTron_electrodeposition
author = Nis Fisker-Bødker
version = file: src/python/_version.txt
description = openTron_electrodeposition is a combined control and automated experiment to electro deposit and caracterize the Oxygen Evolution Reaction catalyst performance.

[options]
python_requires = >=3.8
package_dir=
    =src
packages=find:
include_package_data = true
install_requires =
    requests
    opentrons

[options.extras_require]
dev =
    pre-commit
    black
    flake8

[options.packages.find]
where=src
