[metadata]
name = opentronsHTTPAPI_wrapper
author = Daniel Persaud & Nis Fisker-Bødker
version = file: src/python/_version.txt
description = python wrapper for opentrons http api requests

[options]
python_requires = >=3.8
package_dir=
    =src
packages=find:
include_package_data = true
install_requires =
    requests
    logging
    json

[options.extras_require]
dev =
    pre-commit
    black
    flake8

[options.packages.find]
where=src
