[metadata]
name = opentronsHTTPAPI_wrapper
author = Daniel Persaud & Nis Fisker-Bødker
version = file: _version.txt
description = python wrapper for opentrons http api requests

[options]
python_requires = >=3.8
package_dir=
    =./
packages=find:
include_package_data = true
[options.extras_require]
dev =
    pre-commit
    black
    flake8

[options.packages.find]
where=./
